tests/baselines/reference/-57087-contextualOverloadListFromArrayUnion-04.errors.txt
-57087-contextualOverloadListFromArrayUnion-04.ts(3,30): error TS2345: Argument of type '(x: string) => number' is not assignable to parameter of type '((value: number[], index: number, array: number[][]) => number) & ((value: string, index: number, array: string[]) => number)'.
  Type '(x: string) => number' is not assignable to type '(value: number[], index: number, array: number[][]) => number'.
    Types of parameters 'x' and 'value' are incompatible.
      Type 'number[]' is not assignable to type 'string'.


==== -57087-contextualOverloadListFromArrayUnion-04.ts (1 errors) ====
    declare const y4: number[][] | string[];
    declare function f4<T extends {length:number}>(): (x: T) => number;
    export const yThen4 = y4.map(f4()); // should not be an error, but is an error
                                 ~~~~
!!! error TS2345: Argument of type '(x: string) => number' is not assignable to parameter of type '((value: number[], index: number, array: number[][]) => number) & ((value: string, index: number, array: string[]) => number)'.
!!! error TS2345:   Type '(x: string) => number' is not assignable to type '(value: number[], index: number, array: number[][]) => number'.
!!! error TS2345:     Types of parameters 'x' and 'value' are incompatible.
!!! error TS2345:       Type 'number[]' is not assignable to type 'string'.
    